// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Public tags controller GET /tags/:urlPart Возвращает тег 1`] = `
Object {
  "blocks": Array [],
  "createdAt": "2021-11-26T12:12:12.000Z",
  "isArchived": false,
  "isHot": false,
  "isPartnership": false,
  "lastEditedAt": "2021-11-26T12:12:12.000Z",
  "metaDescription": "Мета описание тега",
  "metaTitle": "Мета название тега",
  "mmm": "TOYOTA:COROLLA:2020",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipName": "Партнер",
  "postsCount": 0,
  "shortTitle": "Описание тега",
  "title": "Название тега",
  "urlPart": "tag-url-part",
}
`;

exports[`Public tags controller GET /tags/:urlPart Возвращает тег с корректно трансформированными блоками, дополненными постами 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "two": Array [
              "url-part-220",
              "url-part-211",
            ],
            "type": "two",
          },
          Object {
            "oneBig": "url-part-219",
            "type": "oneBig",
          },
          Object {
            "oneBig": "url-part-212",
            "type": "oneBig",
          },
        ],
      },
      "type": "section",
    },
    Object {
      "readMore": Object {
        "morePostsNum": 5,
        "posts": Array [
          "url-part-218",
          "url-part-213",
          "url-part-217",
        ],
      },
      "type": "readMore",
    },
  ],
  "createdAt": "2021-11-26T12:12:12.000Z",
  "isArchived": false,
  "isHot": false,
  "isPartnership": false,
  "lastEditedAt": "2021-11-26T12:12:12.000Z",
  "metaDescription": "Мета описание тега",
  "metaTitle": "Мета название тега",
  "mmm": "TOYOTA:COROLLA:2020",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipName": "Партнер",
  "posts": Object {
    "url-part-211": Object {
      "categories": Array [],
      "lead": "Пост номер 1 Пост номер 1 Пост номер 1",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:11.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 1",
      "urlPart": "url-part-211",
    },
    "url-part-212": Object {
      "blocks": Array [],
      "categories": Array [],
      "lead": "Пост номер 2 Пост номер 2 Пост номер 2",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:12.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 2",
      "urlPart": "url-part-212",
    },
    "url-part-213": Object {
      "categories": Array [],
      "lead": "Пост номер 3 Пост номер 3 Пост номер 3",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:13.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 3",
      "urlPart": "url-part-213",
    },
    "url-part-217": Object {
      "categories": Array [],
      "lead": "Пост номер 7 Пост номер 7 Пост номер 7",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:17.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 7",
      "urlPart": "url-part-217",
    },
    "url-part-218": Object {
      "categories": Array [],
      "lead": "Пост номер 8 Пост номер 8 Пост номер 8",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:18.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 8",
      "urlPart": "url-part-218",
    },
    "url-part-219": Object {
      "blocks": Array [],
      "categories": Array [],
      "lead": "Пост номер 9 Пост номер 9 Пост номер 9",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:19.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 9",
      "urlPart": "url-part-219",
    },
    "url-part-220": Object {
      "categories": Array [],
      "lead": "Пост номер 10 Пост номер 10 Пост номер 10",
      "mainImage": Object {
        "imagename": "Malogabaritnye_kvartiry_1604661526745",
        "meta": Object {
          "orig-format": "PNG",
          "orig-size-bytes": 900900,
        },
        "sizes": Object {
          "1098x1098": Object {
            "height": 409,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1098x1098",
            "width": 1098,
          },
          "1200х1200": Object {
            "height": 447,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1200х1200",
            "width": 1200,
          },
          "1252x1252": Object {
            "height": 466,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1252x1252",
            "width": 1252,
          },
          "1428x1428": Object {
            "height": 532,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1428x1428",
            "width": 1428,
          },
          "1600x1600": Object {
            "height": 596,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1600x1600",
            "width": 1600,
          },
          "1920x1920": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/1920x1920",
            "width": 1880,
          },
          "320х320": Object {
            "height": 119,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/320х320",
            "width": 320,
          },
          "338x338": Object {
            "height": 126,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/338x338",
            "width": 338,
          },
          "439x439": Object {
            "height": 163,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/439x439",
            "width": 439,
          },
          "460х460": Object {
            "height": 171,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/460х460",
            "width": 460,
          },
          "571x571": Object {
            "height": 213,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/571x571",
            "width": 571,
          },
          "650x650": Object {
            "height": 242,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/650x650",
            "width": 650,
          },
          "845x845": Object {
            "height": 315,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/845x845",
            "width": 845,
          },
          "optimize": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/optimize",
            "width": 1880,
          },
          "orig": Object {
            "height": 700,
            "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/1398410/Malogabaritnye_kvartiry_1604661526745/orig",
            "width": 1880,
          },
        },
      },
      "publishAt": "2021-11-26T12:12:20.000Z",
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "TOYOTA:COROLLA:2020",
          "partnershipBadgeName": "Бейдж партнера",
          "partnershipName": "Партнер",
          "title": "Название тега",
          "urlPart": "tag-url-part",
        },
      ],
      "title": "Пост номер 10",
      "urlPart": "url-part-220",
    },
  },
  "postsCount": 10,
  "shortTitle": "Описание тега",
  "title": "Название тега",
  "urlPart": "tag-url-part",
}
`;

exports[`Public tags controller GET /tags/:urlPart Возвращает тег с корректным количеством постов 1`] = `
Object {
  "blocks": Array [],
  "createdAt": "2021-11-26T12:12:12.000Z",
  "isArchived": false,
  "isHot": false,
  "isPartnership": false,
  "lastEditedAt": "2021-11-26T12:12:12.000Z",
  "metaDescription": "Мета описание тега",
  "metaTitle": "Мета название тега",
  "mmm": "TOYOTA:COROLLA:2020",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipName": "Партнер",
  "postsCount": 2,
  "shortTitle": "Описание тега",
  "title": "Название тега",
  "urlPart": "tag-url-part",
}
`;

exports[`Public tags controller GET /tags/:urlPart/draft Возвращает черновик тега 1`] = `
Object {
  "blocks": Array [],
  "createdAt": "2021-11-26T12:12:12.000Z",
  "isArchived": false,
  "isHot": false,
  "isPartnership": false,
  "lastEditedAt": "2021-11-26T12:12:12.000Z",
  "metaDescription": "Мета описание тега",
  "metaTitle": "Мета название тега",
  "mmm": "TOYOTA:COROLLA:2020",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipName": "Партнер",
  "postsCount": 0,
  "shortTitle": "Описание тега (черновик)",
  "title": "Название тега (черновик)",
  "urlPart": "tag-url-part",
}
`;

exports[`Public tags controller GET /tags/:urlPart/draft Возвращает черновик тега с корректно трансформированными блоками, дополненными постами 1`] = `
Object {
  "blocks": Array [],
  "createdAt": "2021-11-26T12:12:12.000Z",
  "isArchived": false,
  "isHot": false,
  "isPartnership": false,
  "lastEditedAt": "2021-11-26T12:12:12.000Z",
  "metaDescription": "Мета описание тега",
  "metaTitle": "Мета название тега",
  "mmm": "TOYOTA:COROLLA:2020",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipName": "Партнер",
  "posts": Object {},
  "postsCount": 10,
  "shortTitle": "Описание тега",
  "title": "Название тега",
  "urlPart": "tag-url-part",
}
`;

exports[`Public tags controller GET /tags/:urlPart/draft Возвращает черновик тега с корректным количеством постов 1`] = `
Object {
  "blocks": Array [],
  "createdAt": "2021-11-26T12:12:12.000Z",
  "isArchived": false,
  "isHot": false,
  "isPartnership": false,
  "lastEditedAt": "2021-11-26T12:12:12.000Z",
  "metaDescription": "Мета описание тега",
  "metaTitle": "Мета название тега",
  "mmm": "TOYOTA:COROLLA:2020",
  "partnershipBadgeName": "Бейдж партнера",
  "partnershipName": "Партнер",
  "postsCount": 2,
  "shortTitle": "Описание тега (черновик)",
  "title": "Название тега (черновик)",
  "urlPart": "tag-url-part",
}
`;
